--- a/app/views/discover/index.html.erb
+++ b/app/views/discover/index.html.erb
@@ -1,7 +1,7 @@
 <h1><%= "#{@user.name}'s Discover Page" %></h1><br>
 
 <section class="top_rated_movies">
-  <%= button_to "Discover Top Rated Movies", user_movies_path, method: :get %>  <br>
+  <%= button_to "Discover Top Rated Movies", user_movies_path(@user), method: :get %>  <br>
 <section class="search_by_movie_title">
   <%= form_with url: user_movies_path, method: :get, data: {turbo: false}, local: true do |f| %>
     <%= f.label :search %> 
